--- a/package.json
+++ b/package.json
@@ -44,11 +44,15 @@
     },
     "dependencies": {
         "@ark-ui/solid": "^4.10.1",
+        "@kobalte/core": "^0.13.0",
+        "@monaco-editor/react": "^4.6.0",
         "@nanostores/persistent": "^0.10.2",
         "@nanostores/solid": "^0.5.0",
+        "@solid-primitives/resize-observer": "^2.0.0",
         "@solidjs/router": "^0.15.3",
         "@tauri-apps/api": "^2.2.0",
         "@tauri-apps/plugin-dialog": "^2.2.0",
+        "@tauri-apps/plugin-fs": "^2.0.0",
         "@tauri-apps/plugin-http": "^2.3.0",
         "@tauri-apps/plugin-log": "^2.2.1",
         "@tauri-apps/plugin-notification": "^2.2.1",
@@ -58,7 +62,10 @@
         "@tauri-apps/plugin-shell": "^2.2.0",
         "@tauri-apps/plugin-updater": "^2.5.0",
         "consola": "^3.4.0",
+        "fuse.js": "^7.0.0",
+        "isomorphic-git": "^1.25.0",
         "lucide-solid": "^0.475.0",
+        "monaco-editor": "^0.45.0",
         "nanostores": "^0.11.4",
         "pathe": "^2.0.3",
         "solid-js": "^1.9.4",
