--- a/package.json
+++ b/package.json
@@ -14,9 +14,6 @@
         "build:win:arm": "CI=true tauri build --target aarch64-pc-windows-msvc",
         "build:debug": "tauri build --debug",
         "build:ui": "vite build",
-        "dev:storybook": "VITE_CJS_IGNORE_WARNING=true storybook dev -p 6006 --no-open",
-        "build:storybook": "VITE_CJS_IGNORE_WARNING=true storybook build -o .output/storybook",
-        "start:storybook": "pnpm dlx serve .output/storybook -l 6006 -n -C",
         "check": "biome check . --write",
         "lint": "biome lint . --write",
         "format": "pnpm --stream --color \"/format:/\"",
@@ -43,13 +40,17 @@
         "tauri": "tauri"
     },
     "dependencies": {
-        "@ark-ui/solid": "^4.10.1",
-        "@kobalte/core": "^0.13.0",
+        "@hookform/resolvers": "^5.2.1",
         "@monaco-editor/react": "^4.6.0",
         "@nanostores/persistent": "^0.10.2",
-        "@nanostores/solid": "^0.5.0",
-        "@solid-primitives/resize-observer": "^2.0.0",
-        "@solidjs/router": "^0.15.3",
+        "@nanostores/react": "^0.8.0",
+        "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-popover": "^1.1.15",
+        "@radix-ui/react-select": "^2.2.6",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-switch": "^1.2.6",
         "@tauri-apps/api": "^2.2.0",
         "@tauri-apps/plugin-dialog": "^2.2.0",
         "@tauri-apps/plugin-fs": "^2.0.0",
@@ -61,32 +62,33 @@
         "@tauri-apps/plugin-process": "^2.2.0",
         "@tauri-apps/plugin-shell": "^2.2.0",
         "@tauri-apps/plugin-updater": "^2.5.0",
+        "class-variance-authority": "^0.7.1",
+        "cmdk": "^1.1.1",
         "consola": "^3.4.0",
         "fuse.js": "^7.0.0",
         "isomorphic-git": "^1.25.0",
-        "lucide-solid": "^0.475.0",
+        "lucide-react": "^0.475.0",
         "monaco-editor": "^0.45.0",
         "nanostores": "^0.11.4",
         "pathe": "^2.0.3",
-        "solid-js": "^1.9.4",
-        "std-env": "^3.8.0"
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-hook-form": "^7.62.0",
+        "react-router-dom": "^6.29.0",
+        "std-env": "^3.8.0",
+        "zod": "^4.1.3"
     },
     "devDependencies": {
         "@biomejs/biome": "^1.9.4",
-        "@solidjs/testing-library": "^0.8.10",
-        "@storybook/addon-a11y": "^8.5.7",
-        "@storybook/addon-essentials": "^8.5.7",
-        "@storybook/addon-links": "^8.5.7",
-        "@storybook/blocks": "^8.5.7",
-        "@storybook/core-events": "^8.5.7",
-        "@storybook/manager-api": "^8.5.7",
-        "@storybook/test": "^8.5.7",
-        "@storybook/theming": "^8.5.7",
         "@tailwindcss/vite": "^4.0.7",
         "@tauri-apps/cli": "^2.2.7",
         "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.1.0",
         "@testing-library/user-event": "^14.6.1",
         "@types/node": "^22.13.4",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
+        "@vitejs/plugin-react": "^4.3.4",
         "@vitest/coverage-v8": "^3.0.6",
         "@vitest/ui": "^3.0.6",
         "clsx": "^2.1.1",
@@ -94,21 +96,21 @@
         "lefthook": "^1.10.10",
         "npm-check-updates": "^17.1.14",
         "rtk": "^3.1.1",
-        "storybook": "^8.5.7",
-        "storybook-solidjs": "^1.0.0-beta.6",
-        "storybook-solidjs-vite": "^1.0.0-beta.6",
         "tailwind-merge": "^3.0.1",
         "tailwind-variants": "^0.3.1",
         "tailwindcss": "^4.0.7",
         "tailwindcss-motion": "^1.1.0",
         "typescript": "^5.7.3",
         "vite": "^6.1.0",
-        "vite-plugin-solid": "^2.11.1",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "^3.0.6"
     },
     "packageManager": "pnpm@10.4.1",
     "pnpm": {
-        "onlyBuiltDependencies": ["@biomejs/biome", "esbuild", "lefthook"]
+        "onlyBuiltDependencies": [
+            "@biomejs/biome",
+            "esbuild",
+            "lefthook"
+        ]
     }
 }
