--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,8 +10,7 @@
         "forceConsistentCasingInFileNames": true,
         "incremental": true,
         "isolatedModules": true,
-        "jsx": "preserve",
-        "jsxImportSource": "solid-js",
+        "jsx": "react-jsx",
         "lib": ["DOM", "DOM.Iterable", "ES2023"],
         "module": "ESNext",
         "moduleDetection": "force",
@@ -37,6 +36,7 @@
         "verbatimModuleSyntax": false,
         "baseUrl": ".",
         "paths": {
+            "@/*": ["./src/*"],
             "#/*": ["./src/*"],
             "~~/*": ["./*"]
         }
