--- a/src-tauri/Info.plist
+++ b/src-tauri/Info.plist
@@ -8,7 +8,7 @@
             <dict>
                 <key>CFBundleURLName</key>
                 <!-- Obviously needs to be replaced with your app's bundle identifier -->
-                <string>com.example.tauri-start-solid</string>
+                <string>com.genwave.slate-ide</string>
                 <key>CFBundleURLSchemes</key>
                 <array>
                     <!-- Register deep link: tauri-app:// -->
