--- a/package.json
+++ b/package.json
@@ -113,11 +113,6 @@
     },
     "packageManager": "pnpm@10.4.1",
     "pnpm": {
-        "onlyBuiltDependencies": [
-            "@biomejs/biome",
-            "@tailwindcss/oxide",
-            "esbuild",
-            "lefthook"
-        ]
+        "onlyBuiltDependencies": ["@biomejs/biome", "@tailwindcss/oxide", "esbuild", "lefthook"]
     }
 }
