--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
         "@monaco-editor/react": "^4.6.0",
         "@nanostores/persistent": "^0.10.2",
         "@nanostores/react": "^0.8.0",
+        "@radix-ui/react-checkbox": "^1.3.3",
         "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-popover": "^1.1.15",
         "@radix-ui/react-radio-group": "^1.3.8",
@@ -113,6 +115,11 @@
     },
     "packageManager": "pnpm@10.4.1",
     "pnpm": {
-        "onlyBuiltDependencies": ["@biomejs/biome", "@tailwindcss/oxide", "esbuild", "lefthook"]
+        "onlyBuiltDependencies": [
+            "@biomejs/biome",
+            "@tailwindcss/oxide",
+            "esbuild",
+            "lefthook"
+        ]
     }
 }
