--- a/package.json
+++ b/package.json
@@ -40,13 +40,17 @@
         "tauri": "tauri"
     },
     "dependencies": {
+        "@ai-sdk/react": "^2.0.28",
         "@hookform/resolvers": "^5.2.1",
         "@monaco-editor/react": "^4.6.0",
         "@nanostores/persistent": "^0.10.2",
         "@nanostores/react": "^0.8.0",
+        "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-collapsible": "^1.1.12",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-hover-card": "^1.1.15",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-popover": "^1.1.15",
         "@radix-ui/react-radio-group": "^1.3.8",
@@ -59,6 +63,7 @@
         "@radix-ui/react-toggle": "^1.1.10",
         "@radix-ui/react-toggle-group": "^1.1.11",
         "@radix-ui/react-tooltip": "^1.2.8",
+        "@radix-ui/react-use-controllable-state": "^1.2.2",
         "@tauri-apps/api": "^2.2.0",
         "@tauri-apps/plugin-dialog": "^2.2.0",
         "@tauri-apps/plugin-fs": "^2.0.0",
@@ -70,20 +75,29 @@
         "@tauri-apps/plugin-process": "^2.2.0",
         "@tauri-apps/plugin-shell": "^2.2.0",
         "@tauri-apps/plugin-updater": "^2.5.0",
+        "@types/react-syntax-highlighter": "^15.5.13",
+        "ai": "^5.0.28",
         "class-variance-authority": "^0.7.1",
         "cmdk": "^1.1.1",
         "consola": "^3.4.0",
+        "embla-carousel-react": "^8.6.0",
         "fuse.js": "^7.0.0",
         "isomorphic-git": "^1.25.0",
         "lucide-react": "^0.475.0",
         "monaco-editor": "^0.45.0",
+        "nanoid": "^5.1.5",
         "nanostores": "^0.11.4",
         "pathe": "^2.0.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.62.0",
         "react-router-dom": "^6.29.0",
+        "react-syntax-highlighter": "^15.6.6",
+        "sonner": "^2.0.7",
         "std-env": "^3.8.0",
+        "streamdown": "^1.1.6",
+        "tw-animate-css": "^1.3.7",
+        "use-stick-to-bottom": "^1.1.1",
         "zod": "^4.1.3"
     },
     "devDependencies": {
