--- a/package.json
+++ b/package.json
@@ -89,8 +89,10 @@
         "nanostores": "^0.11.4",
         "pathe": "^2.0.3",
         "react": "^18.3.1",
+        "react-arborist": "^3.4.3",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.62.0",
+        "react-resizable-panels": "^3.0.5",
         "react-router-dom": "^6.29.0",
         "react-syntax-highlighter": "^15.6.6",
         "sonner": "^2.0.7",
@@ -124,6 +126,7 @@
         "tailwindcss-motion": "^1.1.0",
         "typescript": "^5.7.3",
         "vite": "^6.1.0",
+        "vite-plugin-monaco-editor": "^1.1.0",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "^3.0.6"
     },
