--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "@tauri-apps/plugin-http": "^2.3.0",
         "@tauri-apps/plugin-log": "^2.2.1",
         "@tauri-apps/plugin-notification": "^2.2.1",
+        "@tauri-apps/plugin-opener": "^2.5.0",
         "@tauri-apps/plugin-os": "^2.2.0",
         "@tauri-apps/plugin-positioner": "^2.2.0",
         "@tauri-apps/plugin-process": "^2.2.0",
