--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,6 +34,7 @@ tauri-plugin-os = "2"
 tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
 tauri-plugin-process = "2"
 tauri-plugin-shell = "2"
+tauri-plugin-opener = "2"
 
 # Essential crates
 anyhow = "1.0"
