--- a/biome.json
+++ b/biome.json
@@ -112,6 +112,6 @@
     "files": {
         "ignoreUnknown": true,
         "include": ["**/*.js", "**/*.mjs", "**/*.ts", "**/*.tsx", "**/*.css", "**/*.json"],
-        "ignore": [".github", ".output", "dist", "**/*.rs", "target", "src/libs/bindings.ts"]
+        "ignore": [".github", ".output", "dist", "**/*.rs", "target", "src/libs/bindings.ts", "ref-docs/**"]
     }
 }
